--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title>FiiGezr</title>
+        <meta name="keywords" content="project, infoiasi, wade, web">
+        <meta name="author" content="Florean Oana-Lavinia">
+        <meta name="author" content="Borsan Razvan">
+        <meta name="author" content="Gafitescu Petru-Marian">
     </head>
     <body>
         <p>This is the public Web site recording the project progress.</p>
