Updated date action

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 internal data structures/models to be used and the external APIs managed by
                 the application.
             </p>
-            <span property="schema:potentialAction" typeof="schema:ReadAction">
+            <span property="schema:potentialAction" typeof="schema:WriteAction">
                 <meta property="schema:actionStatus" content="CompletedActionStatus">
                     (added on
                 <time property="schema:endTime" datatype="xsd:date"
