--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="progress-tile">
             <h3>First prototype</h3>
             <p>
-                The first server version is ready. Work starts on interactive components (quiz game).
+                The first server version integrating all components is ready. Work starts on interactive components (quiz game).
             </p>
             <span property="schema:potentialAction" typeof="schema:WriteAction">
                 <meta property="schema:actionStatus" content="CompletedActionStatus">
