--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
         <meta name="author" content="Borsan Razvan">
         <meta name="author" content="Gafitescu Petru-Marian">
         <link rel="stylesheet" href="styles.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     </head>
     <body>
-        <h1>This is the public Web site recording the project progress.</h1>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                    <a class="nav-link" href="scholarly_report/report.html" aria-label="Scholarly report">Report</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="user_guide/user_guide.html" >User Guide</a>
+                    </li>
+                </ul>
+                </div>
+            </div>
+        </nav>
+        <h1 class="my-title">This is the public Web site recording the project progress.</h1>
 
         <div class="progress-tile">
             <h3>First discussions</h3>
