--- a/user_guide/user_guide.html
+++ b/user_guide/user_guide.html
@@ -33,7 +33,7 @@
         Gezr is a web application that has the purpose of creating a small structure out of Webcam-captured video-streams,
         by detecting, classifying and comparing hand/arm gestures of users, providing also information about rules resulted
         from the input gesture.
-        Simple users will conect to the application with camera on and they could see, by request, gestures data resulted until that point and,
+        Simple users will connect to the application with camera on and they could see, by request, gestures data resulted until that point and,
         eventually, they can start a quiz game.
       </p>
     </section>
@@ -48,11 +48,11 @@
     <section id="overview">
       <h2>Overview</h2>
       <p property="text">
-        When accessing the application, the user is shown dirrectly the main page that contains the Webcam streams already processed, showing
+        When accessing the application, the user is shown directly the main page that contains the Webcam streams already processed, showing
         the landmarks of the hand, when one or many are found in video, and the gesture found by the application on the first hand.
         Once the main page is accessed, the gestures found are also registered by the application for future references.
-        At this moment, the user can start a quiz game, where he could answer with true or false only though gestures, or
-        he could cause a rule, like opening a new tab in the current browser or stop recording data. All the registered gestures
+        At this moment, the user can start a quiz game, where he could answer with true or false only through gestures, or
+        he could cause the triggering of a rule, like certain gestures opening a new tab in the current browser or stop recording data. All the registered gestures
         can also be seen in the statistics tab. 
       </p>
       <p>
@@ -65,7 +65,7 @@
         <h3>Menu</h3>
         <p>
           The menu on the top provides actions for the user. Therefore, a user can get statistics of the gestures
-          registered by now and start a quiz game, but also to see informations about the application.
+          registered by now and start a quiz game, but also to see information about the application.
         </p>
 
         <p>
